--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,33 @@
-name: Hank Quinlan, Horrible Cop
+name: Pedro Costa Ferreira
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+
+
+gems: ['jekyll/scholar']
+
+scholar:
+  style: apa
+  locale: en
+
+  sort_by: none
+  order: ascending
+
+  group_by: none
+  group_order: ascending
+
+  source: ./_bibliography
+  bibliography: references.bib
+  bibliography_template: "{{reference}}"
+
+  replace_strings: true
+  join_strings:    true
+
+  use_raw_bibtex_entry: false
+  bibtex_filters:
+  - superscript
+  - latex
+
+  details_dir:    bibliography
+  details_layout: bibtex.html
+  details_link:   Details
+
+  query: "@*"
