--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ scholar:
 
 image: /images/default.jpg
 
-url: "http://greedblink.github.io/"
+url: "http://pedrocostaferreira.github.io/"
 
 authors: 
   jonatha: 
