--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ gems:
   - rdiscount
   - jekyll-org-mode-converter
 
-
+gems: [ 'jekyll-pandoc-multiple-formats' ]
 gems: [jekyll-paginate, jekyll-feed]
 paginate: 4
 paginate_path: "/blog/page:num/"
