--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,12 @@ gems:
   - jekyll/scholar
   - rdiscount
   - jekyll-org-mode-converter
-
+  - redcarpet
+  - kramdown
+  - jekyll-feed
+  
 gems: [ 'jekyll-pandoc-multiple-formats' ]
-gems: [jekyll-paginate, jekyll-feed]
+
 paginate: 4
 paginate_path: "/blog/page:num/"
 
@@ -44,6 +47,10 @@ scholar:
 image: /images/default.jpg
 
 url: "http://pedrocostaferreira.github.io/"
+
+
+
+
 
 authors: 
   jonatha: 
