--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,10 @@ gems:
   - redcarpet
   - kramdown
   - jekyll-feed
+  - jekyll-paginate
   
 gems: [ 'jekyll-pandoc-multiple-formats' ]
-
+gems: [jekyll-paginate]
 paginate: 4
 paginate_path: "/blog/page:num/"
 
@@ -80,7 +81,3 @@ authors:
      email: pedro.guilherme@fgv.br
      twitter: 
      github: 
-
-
-
-
